--- a/src/css/playlist-sidebar.scss
+++ b/src/css/playlist-sidebar.scss
@@ -1,3 +1,83 @@
+%songItem {
+	.song-item {
+		z-index: 999;
+		width: 100%;
+		height: 60px;
+		padding: 10px;
+		cursor: pointer;
+		margin-bottom: 15px;
+		border-radius: 10px;
+		transition: all 0.35s ease;
+		flex: 1;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		&:hover {
+			background-color: var(--bg-lv6);
+		}
+
+		img {
+			width: 40px;
+			height: 40px;
+			margin-right: 10px;
+
+			position: relative;
+			opacity: 1;
+		}
+		.left {
+			width: 100%;
+			display: flex;
+			align-items: center;
+			justify-content: flex-start;
+
+			.left-content {
+				position: relative;
+				font-size: 1.1rem;
+				width: 100%;
+				display: flex;
+				flex-direction: column;
+				align-items: flex-start;
+				justify-content: flex-start;
+
+				.song-title,
+				.song-artist {
+					width: 80%;
+					overflow: hidden;
+					white-space: nowrap;
+					text-overflow: ellipsis;
+				}
+				.song-title {
+					font-weight: 600;
+				}
+			}
+		}
+		.right {
+			display: flex;
+			align-items: center;
+			& > .duration {
+				width: 50px;
+			}
+		}
+	}
+}
+%songList {
+	.song-list {
+		position: relative;
+		flex: 1;
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+		justify-content: flex-start;
+		overflow: hidden auto;
+		padding: 0 15px;
+		height: 330px;
+		transition: opacity 0.3s ease;
+		&::-webkit-scrollbar {
+			width: 0;
+		}
+	}
+}
+
 .playlist-sidebar {
 	background-color: var(--bg-lv7);
 	position: absolute;
@@ -5,8 +85,137 @@
 	right: 0;
 	width: 0;
 	height: 100%;
+	z-index: 1000;
 	transition: all 0.5s ease;
 	&.active {
-		width: 280px;
+		width: 350px;
+		.top-bar {
+			.left,
+			.right {
+				opacity: 1;
+			}
+		}
+		.content > * {
+			opacity: 1;
+			transition-delay: 0.3s;
+		}
+	}
+	&.recent {
+		.recent-tab {
+			opacity: 1;
+		}
+		.playlist-tab {
+			opacity: 0;
+		}
+	}
+
+	.top-bar {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		padding: 7px 15px;
+		margin-top: 10px;
+
+		.ico {
+			flex: 1;
+			display: flex;
+			padding: 5px;
+		}
+		.left,
+		.right {
+			opacity: 0;
+			transition: all 0.2s ease;
+		}
+		.left {
+			flex: 3;
+			display: flex;
+			align-items: center;
+			justify-content: space-around;
+			background-color: var(--bg-lv6);
+			border-radius: 30px;
+			margin-right: 20px;
+			padding: 10px 0;
+			.option {
+				cursor: pointer;
+				padding: 10px 20px;
+				border-radius: 20px;
+
+				&.active {
+					background-color: var(--bg-lv4);
+				}
+			}
+		}
+		.right {
+			flex: 1;
+			display: flex;
+			justify-content: flex-end;
+		}
+	}
+	.content {
+		position: absolute;
+		top: 80px;
+		width: 100%;
+		overflow: hidden auto;
+		@extend %songItem;
+		.now-play {
+			background-color: var(--bg-lv6);
+			border-radius: 20px;
+			margin: 15px 20px;
+			height: 70px;
+			box-shadow: 4px 4px 0 2px var(--bg-lv4);
+		}
+		.next-play {
+			.title {
+				letter-spacing: 7px;
+				font-size: 1.4rem;
+				padding: 10px;
+				margin: 10px;
+				& > span {
+					position: relative;
+					&::after {
+						content: '';
+						position: absolute;
+						bottom: -12px;
+						left: 10px;
+						right: 22px;
+						height: 5px;
+						transform: scale(0);
+						transition: all 0.3s ease;
+						background-color: var(--bg-lv4);
+					}
+					&:hover::after {
+						transform: scale(1);
+					}
+				}
+			}
+			@extend %songList;
+		}
+		& > * {
+			opacity: 0;
+			transition: opacity 0.2s ease;
+		}
+	}
+	.recent-tab {
+		@extend %songList;
+		margin-top: 10px;
+		opacity: 0;
+		& > .song-list {
+			height: 470px;
+		}
+	}
+	.playlist-tab {
+		opacity: 1;
+	}
+}
+
+@media screen and (max-width: 1024px) {
+}
+@media screen and (max-width: 750px) {
+}
+@media screen and (max-width: 500px) {
+	.playlist-sidebar {
+		&.active {
+			width: calc(100% - 70px);
+		}
 	}
 }
