--- a/src/css/main_content.scss
+++ b/src/css/main_content.scss
@@ -321,7 +321,7 @@
 			padding: 10px 6px;
 			margin: 0 auto 40px;
 			border-radius: 25px;
-			background-color: var(--bg-lv7);
+			background-color: var(--bg-lv6);
 			&.ontop {
 				position: fixed;
 				top: 0;
@@ -344,7 +344,7 @@
 					border-radius: 20px;
 					transition: all 0.35s ease;
 					&:hover {
-						background-color: var(--bg-lv6);
+						background-color: var(--bg-lv7);
 					}
 				}
 				.liactive {
@@ -879,7 +879,7 @@
 					.link {
 						width: 90%;
 						margin: 5px 0;
-						padding: 5px;
+						padding: 10px 5px;
 					}
 				}
 			}
