--- a/src/css/main_content.scss
+++ b/src/css/main_content.scss
@@ -830,12 +830,12 @@
 	transform: scale(1.3);
 }
 
-@media screen and (max-width: 1024px) {
+@media (max-width: 1024px) {
 	.main-content > .personal-section .nav-bar.ontop {
 		left: calc(59% - 70px);
 	}
 }
-@media screen and (max-width: 750px) {
+@media (max-width: 750px) {
 	.main-content {
 		&:hover::-webkit-scrollbar-thumb,
 		& > .personal-section .song-list:hover::-webkit-scrollbar-thumb,
