--- a/src/css/player_control.css
+++ b/src/css/player_control.css
@@ -164,7 +164,7 @@
 	margin: 0 20px;
 }
 
-@media screen and (max-width: 1024px) {
+@media (max-width: 1024px) {
 	.player-control .song-info .media-img {
 		position: absolute;
 		top: -20px;
@@ -174,7 +174,7 @@
 	}
 }
 
-@media screen and (max-width: 750px) {
+@media (max-width: 750px) {
 	.player-control .ico {
 		padding: 10px;
 	}
