--- a/src/css/player_control.css
+++ b/src/css/player_control.css
@@ -172,6 +172,22 @@
 		z-index: -1;
 		opacity: 0.7;
 	}
+	.player-control #progress {
+		width: calc(25vw - 32px);
+	}
+
+	.player-control .player-tools .controller .ico {
+		padding: 15px 18px;
+	}
+	.player-control .player-tools .left .ico {
+		padding: 15px 7px;
+	}
+	.player-control #volume {
+		position: absolute;
+		display: none;
+		top: -8px;
+		left: -50px;
+	}
 }
 
 @media (max-width: 750px) {
@@ -183,9 +199,9 @@
 		visibility: hidden;
 	}
 
-	.player-control .vertical-line,
+	.player-control .vertical-line/* ,
 	.player-control .controller .part2 .left-time,
-	.player-control .controller .part2 .right-time {
+	.player-control .controller .part2 .right-time */ {
 		display: none;
 	}
 
@@ -194,11 +210,21 @@
 		top: 14px;
 	}
 
-	.player-control #volume {
-		-webkit-appearance: slider-vertical;
-		position: absolute;
+	.player-control #progress {
+		width: calc(70vw - 160px);
+	}
+
+	.player-control .controller {
+		max-width: calc(100% - 160px);
+	}
+	.player-control .player-tools {
+		width: 50px;
+	}
+	.player-control .song-info {
+		width: 110px;
+	}
+
+	.player-control .player-tools .left {
 		display: none;
-		top: -130px;
-		left: -50px;
 	}
 }
