--- a/src/css/main_content.scss
+++ b/src/css/main_content.scss
@@ -3,6 +3,13 @@
 	align-items: center;
 	justify-content: center;
 }
+%transition {
+	transition: all 0.4s ease;
+}
+%transitionText {
+	transition: all 0.2s ease, color 0.2s 0.2s ease, font-size 0.2s linear,
+		transform 0.3s 0.4s ease;
+}
 
 .main-content {
 	background-color: var(--bg-lv8);
@@ -478,6 +485,608 @@
 				display: flex;
 			}
 		}
+		#songs {
+			.section-content {
+				margin-top: 15px;
+
+				img {
+					cursor: pointer;
+					position: absolute;
+					left: 0;
+					top: 0;
+
+					width: 100%;
+					height: 100%;
+					object-fit: cover;
+					border-radius: 10px;
+					opacity: 0;
+
+					transition: all 0.5s ease;
+				}
+				.img-preview {
+					position: relative;
+					width: 240px;
+					height: 240px;
+				}
+				.song-list {
+					position: relative;
+					flex: 1;
+					display: flex;
+					flex-direction: column;
+					align-items: flex-start;
+					justify-content: flex-start;
+					height: 250px;
+					padding: 0 15px;
+					overflow: hidden auto;
+
+					.song-item {
+						width: 100%;
+						height: 60px;
+						padding: 10px;
+						cursor: pointer;
+						margin-bottom: 15px;
+						border-radius: 10px;
+						transition: all 0.35s ease;
+						flex: 1;
+						display: flex;
+						align-items: center;
+						justify-content: space-between;
+						&:hover {
+							background-color: var(--bg-lv6);
+						}
+
+						img {
+							width: 40px;
+							height: 40px;
+							margin-right: 10px;
+
+							position: relative;
+							opacity: 1;
+						}
+						.left {
+							width: 100%;
+							display: flex;
+							align-items: center;
+							justify-content: flex-start;
+
+							.left-content {
+								position: relative;
+								font-size: 1.1rem;
+								width: 100%;
+								display: flex;
+								flex-direction: column;
+								align-items: flex-start;
+								justify-content: flex-start;
+
+								.song-title,
+								.song-artist {
+									width: 80%;
+									overflow: hidden;
+									white-space: nowrap;
+									text-overflow: ellipsis;
+								}
+								.song-title {
+									font-weight: 600;
+								}
+							}
+						}
+						.right {
+							display: flex;
+							align-items: center;
+
+							& > .duration {
+								width: 50px;
+							}
+						}
+					}
+				}
+			}
+		}
+		#playlist {
+			.new-playlist {
+				background: linear-gradient(33deg, #5a1eae -7%, #ce267a 117%);
+				border-radius: 8px;
+				position: relative;
+				cursor: pointer;
+				z-index: 10;
+				width: 180px;
+				height: 230px;
+				margin-top: 15px;
+				margin-right: 25px;
+				@extend %flexCenter;
+				flex-direction: column;
+				&:hover .create-btn,
+				.create-btn:hover {
+					transform: rotateZ(-90deg);
+				}
+				&:hover {
+					animation: pock 0.7s ease-in-out;
+				}
+
+				.create-btn {
+					position: relative;
+					cursor: pointer;
+					width: 50px;
+					height: 50px;
+					transition: all 0.5s ease;
+					&::after,
+					&::before {
+						content: '';
+						background-color: var(--bg-lv0);
+						position: absolute;
+						top: 50%;
+						height: 3px;
+						width: 50px;
+						transform: translateY(-50%);
+					}
+					&::before {
+						transform: rotateZ(90deg) translateX(-3px);
+						bottom: 2px;
+					}
+				}
+				.title {
+					text-align: center;
+					padding: 10px;
+					font-size: 1.2rem;
+				}
+			}
+			.swiper-container {
+				width: calc(100% - 180px);
+				height: 230px;
+
+				.swiper-pagination {
+					.swiper-pagination-bullet {
+						background-color: #6f7073;
+						margin: 0 5px;
+						border-radius: 5px;
+						transition: all 0.4s ease;
+					}
+					.swiper-pagination-bullet-active {
+						background: linear-gradient(140deg, #d45b7a, #fda576);
+						width: 16px;
+					}
+				}
+			}
+			.swiper-slide {
+				width: 100%;
+				height: 80%;
+				overflow: hidden;
+				position: relative;
+				margin-right: 10px;
+				border-radius: 10px;
+				@extend %flexCenter;
+				flex-direction: column;
+				transition: all 0.5s ease;
+
+				.playlist-option {
+					border-radius: 10px;
+					margin-bottom: 10px;
+					position: relative;
+					width: 130px;
+					height: 160px;
+					display: flex;
+					align-items: center;
+					justify-content: space-around;
+					&:hover {
+						background-size: 120% 120%;
+
+						.playlist-option-overlay {
+							opacity: 1;
+							width: 100%;
+							height: 100%;
+						}
+					}
+					.playlist-option-overlay {
+						border-radius: 10px;
+						position: absolute;
+						width: 0;
+						height: 0;
+						opacity: 0;
+						display: flex;
+						align-items: center;
+						justify-content: space-around;
+						background-color: rgba(0, 0, 0, 0.445);
+						transition: all 0.5s ease;
+						& > i {
+							cursor: pointer;
+							transition: all 0.35s ease;
+							&:hover {
+								transform: scale(1.5);
+							}
+						}
+					}
+				}
+				.playlist-title,
+				.playlist-owner {
+					font-size: 1.1rem;
+					line-height: 1.3;
+				}
+				.playlist-title {
+					font-weight: bold;
+				}
+			}
+		}
+		#artist {
+			.swiper-container {
+				width: 100%;
+				height: 300px;
+			}
+			.artist-info {
+				position: relative;
+				@extend %flexCenter;
+				flex-direction: column;
+				margin: 40px 40px 0 0;
+
+				.artist__bg > div {
+					border-radius: 50%;
+					position: relative;
+					display: block;
+					height: 180px;
+					width: 180px;
+					opacity: 1;
+				}
+				.artist__content {
+					position: relative;
+					display: flex;
+					align-items: center;
+					flex-direction: column;
+					justify-content: center;
+				}
+				.artist__name {
+					font-weight: bold;
+					font-size: 1.3rem;
+					margin: 5px 0;
+				}
+				.artist__status {
+					cursor: pointer;
+					margin: 5px 0;
+					padding: 5px 10px;
+					border-radius: 20px;
+					background-color: var(--bg-lv6);
+				}
+			}
+		}
+		#artist .swiper-container,
+		#playlist .swiper-container {
+			overflow: hidden;
+			position: relative;
+			margin-top: 15px;
+			@extend %flexCenter;
+		}
+		#artist .swiper-wrapper,
+		#playlist .swiper-wrapper {
+			position: absolute;
+			inset: 0;
+			z-index: 0;
+			width: 100%;
+			height: 230px;
+		}
+
+		.swiper-button-next,
+		.swiper-button-prev {
+			top: 110px;
+			color: var(--bg-lv1);
+			transition: all 0.3s ease;
+		}
+		.swiper-button-next:hover,
+		.swiper-button-prev:hover {
+			transform: scale(1.3);
+		}
+	}
+	& > .ranking-section {
+		.container {
+			transition: all 0.4s ease;
+			background-color: white;
+			position: relative;
+			text-align: center;
+			border-radius: 8px;
+			margin: 50px auto;
+			max-width: 570px;
+			min-width: 320px;
+			height: 700px;
+			padding: 20px 50px;
+			width: 100%;
+
+			.header {
+				height: 100px;
+				@extend %flexCenter;
+				flex-direction: column;
+
+				.title {
+					font-size: 24px;
+					font-weight: 700;
+					color: #e87867;
+					margin-bottom: 8px;
+					letter-spacing: 1.2px;
+					text-transform: uppercase;
+				}
+				.subtitle {
+					font-size: 14px;
+					color: #5eadb7;
+					letter-spacing: 1.5px;
+				}
+			}
+			.songs {
+				width: 100%;
+				height: 552px;
+				position: relative;
+				@extend %flexCenter;
+				flex-direction: column;
+
+				.categories {
+					display: flex;
+					align-items: flex-end;
+					justify-content: space-between;
+					width: calc(100% - 80px);
+					letter-spacing: 0.2px;
+					font-size: 1.2rem;
+					position: relative;
+					padding: 0 32px 16px;
+					color: #e87867;
+					margin: 0 40px;
+				}
+				.itemSong {
+					width: 100%;
+					display: flex;
+					padding-bottom: 16px;
+					&.featured {
+						width: calc(100% + 80px + 32px);
+						padding-bottom: 0px;
+						margin-bottom: 10px;
+						max-width: 602px;
+						position: absolute;
+						top: 0;
+						height: 184px;
+						color: white;
+						border-radius: 10px;
+						box-shadow: 0px 6px 20px 25% rgb(0, 0, 0);
+						.content {
+							padding: 24px 32px 24px 24px;
+							-webkit-box-align: end;
+							border-radius: inherit;
+							align-items: flex-end;
+							position: relative;
+
+							.number {
+								width: 40px;
+								height: 40px;
+								top: initial;
+								bottom: 24px;
+								left: 24px;
+								font-size: 18px;
+								background-color: rgba(255, 255, 255, 0.4);
+								backdrop-filter: blur(5px);
+							}
+							.image {
+								top: 0;
+								left: 0;
+								width: 100%;
+								height: 100%;
+								overflow: hidden;
+								border-radius: 10px;
+								&::before {
+									opacity: 1;
+									background: linear-gradient(
+										180deg,
+										rgba(0, 0, 0, 0) 55.95%,
+										rgba(0, 0, 0, 0.74) 100%
+									);
+								}
+								&::after {
+									opacity: 0.5;
+									background: #5eadb7;
+								}
+							}
+							.info {
+								margin-left: calc(40px + 16px);
+
+								.text {
+									position: initial;
+									transform: none;
+									top: initial;
+
+									.title {
+										font-size: 18px;
+										font-weight: 500;
+										color: white;
+									}
+									.artist {
+										font-size: 16px;
+										font-weight: 300;
+										color: white;
+									}
+								}
+								.plays {
+									position: absolute;
+									top: initial;
+									right: 32px;
+									color: inherit;
+									font-size: 20px;
+									font-weight: 500;
+									transform: translateY(-8px);
+									&::before {
+										content: 'plays';
+										position: absolute;
+										bottom: -10px;
+										right: 0;
+										font-size: 12px;
+										font-weight: 200;
+										text-align: right;
+										letter-spacing: 0.04em;
+									}
+								}
+								.moreInfo {
+									background-color: #5eadb7;
+									@extend %flexCenter;
+									width: fit-content;
+									height: 32px;
+									padding: 0 16px;
+									border-radius: 4px;
+									left: initial;
+									bottom: -16px;
+									right: calc(8% + 8px);
+									opacity: 1;
+									visibility: visible;
+									box-shadow: 0px 6px 20px 25% rgb(0, 0, 0);
+
+									.moreItem {
+										display: flex;
+										margin-right: 32px;
+									}
+									.counters {
+										display: flex;
+										justify-content: space-around;
+									}
+								}
+							}
+						}
+					}
+					&.animeIn {
+						.text {
+							top: 50%;
+							transform: translateY(-50%);
+							font-size: 12px;
+						}
+
+						.plays {
+							top: 50%;
+							transform: translateY(-50%);
+						}
+					}
+
+					.content {
+						position: relative;
+						border-radius: 6px;
+						display: flex;
+						height: 100%;
+						width: 100%;
+						padding: 8px 24px 8px 8px;
+						background-color: rgba(244, 220, 193, 0.35);
+
+						.number {
+							-webkit-box-align: center;
+							-webkit-box-pack: center;
+							@extend %flexCenter;
+							background: #e87867;
+							border-radius: 100%;
+							position: absolute;
+							color: white;
+							top: -4px;
+							left: -4px;
+							z-index: 2;
+							width: 20px;
+							height: 20px;
+							font-size: 12px;
+							font-weight: 500;
+							transition: all 0.4s
+								cubic-bezier(0.85, 0.08, 0.21, 1.34);
+						}
+						.image {
+							background-color: gray;
+							border-radius: 4px;
+							position: absolute;
+							overflow: hidden;
+							left: 8px;
+							top: 8px;
+							width: 48px;
+							height: calc(100% - 16px);
+							transition: all 0.6s 0.1s
+								cubic-bezier(0.02, 1.09, 0.19, 1.01);
+							&::before,
+							&::after {
+								content: '';
+								position: absolute;
+								height: 100%;
+								width: 100%;
+								opacity: 0;
+								z-index: 1;
+								left: 0;
+								top: 0;
+								transition: all 0.4s 0.2s ease;
+							}
+						}
+						.info {
+							z-index: 1;
+							width: 100%;
+							display: flex;
+							-webkit-box-pack: start;
+							justify-content: flex-start;
+							margin-left: calc(48px + 24px);
+
+							.text {
+								-webkit-box-align: start;
+								-webkit-box-orient: vertical;
+								-webkit-box-direction: normal;
+								display: flex;
+								flex-direction: column;
+								align-items: flex-start;
+								font-size: 14px;
+								color: #5eadb7;
+								height: fit-content;
+								position: absolute;
+								top: 32px;
+								transform: translateY(-50%);
+								transition: all 0.3s ease, color 0.3s 0.1s ease;
+
+								.title {
+									font-weight: 500;
+								}
+							}
+							.plays {
+								position: absolute;
+								right: 32px;
+								top: 32px;
+								font-size: 16px;
+								font-weight: 500;
+								color: #e87867;
+								transform: translateY(-50%);
+								transition: all 0.2s ease, color 0.2s 0.2s ease,
+									font-size 0.2s linear,
+									transform 0.3s 0.4s ease,
+									-webkit-transform 0.3s 0.4s ease;
+							}
+							.moreInfo {
+								color: white;
+								font-size: 12px;
+								font-weight: 600;
+								letter-spacing: 0.8px;
+								visibility: hidden;
+								opacity: 0;
+								display: flex;
+								justify-content: space-between;
+								position: absolute;
+								left: 0;
+								width: 100%;
+								bottom: -20px;
+								padding: 16px 24px;
+								-webkit-box-pack: justify;
+								transition: all 0.3s ease;
+
+								.moreItem {
+									display: flex;
+									margin-right: 32px;
+
+									.score {
+										background-image: url('');
+									}
+								}
+								.counters {
+									display: flex;
+									justify-content: space-around;
+
+									.heart {
+										background-image: url('');
+									}
+									.play {
+										background-image: url('');
+									}
+								}
+							}
+						}
+					}
+				}
+			}
+		}
 	}
 	.to-top {
 		cursor: pointer;
@@ -540,294 +1149,6 @@
 #upload-song,
 #upload-song2 {
 	display: none;
-}
-#songs {
-	.section-content {
-		margin-top: 15px;
-
-		img {
-			cursor: pointer;
-			position: absolute;
-			left: 0;
-			top: 0;
-
-			width: 100%;
-			height: 100%;
-			object-fit: cover;
-			border-radius: 10px;
-			opacity: 0;
-
-			transition: all 0.5s ease;
-		}
-		.img-preview {
-			position: relative;
-			width: 240px;
-			height: 240px;
-		}
-		.song-list {
-			position: relative;
-			flex: 1;
-			display: flex;
-			flex-direction: column;
-			align-items: flex-start;
-			justify-content: flex-start;
-			height: 250px;
-			padding: 0 15px;
-			overflow: hidden auto;
-
-			.song-item {
-				width: 100%;
-				height: 60px;
-				padding: 10px;
-				cursor: pointer;
-				margin-bottom: 15px;
-				border-radius: 10px;
-				transition: all 0.35s ease;
-				flex: 1;
-				display: flex;
-				align-items: center;
-				justify-content: space-between;
-				&:hover {
-					background-color: var(--bg-lv6);
-				}
-
-				img {
-					width: 40px;
-					height: 40px;
-					margin-right: 10px;
-
-					position: relative;
-					opacity: 1;
-				}
-				.left {
-					width: 100%;
-					display: flex;
-					align-items: center;
-					justify-content: flex-start;
-
-					.left-content {
-						position: relative;
-						font-size: 1.1rem;
-						width: 100%;
-						display: flex;
-						flex-direction: column;
-						align-items: flex-start;
-						justify-content: flex-start;
-
-						.song-title,
-						.song-artist {
-							width: 80%;
-							overflow: hidden;
-							white-space: nowrap;
-							text-overflow: ellipsis;
-						}
-						.song-title {
-							font-weight: 600;
-						}
-					}
-				}
-				.right {
-					display: flex;
-					align-items: center;
-
-					& > .duration {
-						width: 50px;
-					}
-				}
-			}
-		}
-	}
-}
-#playlist {
-	.new-playlist {
-		background: linear-gradient(33deg, #5a1eae -7%, #ce267a 117%);
-		border-radius: 8px;
-		position: relative;
-		cursor: pointer;
-		z-index: 10;
-		width: 180px;
-		height: 230px;
-		margin-top: 15px;
-		margin-right: 25px;
-		@extend %flexCenter;
-		flex-direction: column;
-		&:hover .create-btn,
-		.create-btn:hover {
-			transform: rotateZ(-90deg);
-		}
-		&:hover {
-			animation: pock 0.7s ease-in-out;
-		}
-
-		.create-btn {
-			position: relative;
-			cursor: pointer;
-			width: 50px;
-			height: 50px;
-			transition: all 0.5s ease;
-			&::after,
-			&::before {
-				content: '';
-				background-color: var(--bg-lv0);
-				position: absolute;
-				top: 50%;
-				height: 3px;
-				width: 50px;
-				transform: translateY(-50%);
-			}
-			&::before {
-				transform: rotateZ(90deg) translateX(-3px);
-				bottom: 2px;
-			}
-		}
-		.title {
-			text-align: center;
-			padding: 10px;
-			font-size: 1.2rem;
-		}
-	}
-	.swiper-container {
-		width: calc(100% - 180px);
-		height: 230px;
-
-		.swiper-pagination {
-			.swiper-pagination-bullet {
-				background-color: #6f7073;
-				margin: 0 5px;
-				border-radius: 5px;
-				transition: all 0.4s ease;
-			}
-			.swiper-pagination-bullet-active {
-				background: linear-gradient(140deg, #d45b7a, #fda576);
-				width: 16px;
-			}
-		}
-	}
-	.swiper-slide {
-		width: 100%;
-		height: 80%;
-		overflow: hidden;
-		position: relative;
-		margin-right: 10px;
-		border-radius: 10px;
-		@extend %flexCenter;
-		flex-direction: column;
-		transition: all 0.5s ease;
-
-		.playlist-option {
-			border-radius: 10px;
-			margin-bottom: 10px;
-			position: relative;
-			width: 130px;
-			height: 160px;
-			display: flex;
-			align-items: center;
-			justify-content: space-around;
-			&:hover {
-				background-size: 120% 120%;
-
-				.playlist-option-overlay {
-					opacity: 1;
-					width: 100%;
-					height: 100%;
-				}
-			}
-			.playlist-option-overlay {
-				border-radius: 10px;
-				position: absolute;
-				width: 0;
-				height: 0;
-				opacity: 0;
-				display: flex;
-				align-items: center;
-				justify-content: space-around;
-				background-color: rgba(0, 0, 0, 0.445);
-				transition: all 0.5s ease;
-				& > i {
-					cursor: pointer;
-					transition: all 0.35s ease;
-					&:hover {
-						transform: scale(1.5);
-					}
-				}
-			}
-		}
-		.playlist-title,
-		.playlist-owner {
-			font-size: 1.1rem;
-			line-height: 1.3;
-		}
-		.playlist-title {
-			font-weight: bold;
-		}
-	}
-}
-#artist {
-	.swiper-container {
-		width: 100%;
-		height: 300px;
-	}
-	.artist-info {
-		position: relative;
-		@extend %flexCenter;
-		flex-direction: column;
-		margin: 40px 40px 0 0;
-
-		.artist__bg > div {
-			border-radius: 50%;
-			position: relative;
-			display: block;
-			height: 180px;
-			width: 180px;
-			opacity: 1;
-		}
-		.artist__content {
-			position: relative;
-			display: flex;
-			align-items: center;
-			flex-direction: column;
-			justify-content: center;
-		}
-		.artist__name {
-			font-weight: bold;
-			font-size: 1.3rem;
-			margin: 5px 0;
-		}
-		.artist__status {
-			cursor: pointer;
-			margin: 5px 0;
-			padding: 5px 10px;
-			border-radius: 20px;
-			background-color: var(--bg-lv6);
-		}
-	}
-}
-
-#artist .swiper-container,
-#playlist .swiper-container {
-	overflow: hidden;
-	position: relative;
-	margin-top: 15px;
-	@extend %flexCenter;
-}
-#artist .swiper-wrapper,
-#playlist .swiper-wrapper {
-	position: absolute;
-	inset: 0;
-	z-index: 0;
-	width: 100%;
-	height: 230px;
-}
-
-.swiper-button-next,
-.swiper-button-prev {
-	top: 110px;
-	color: var(--bg-lv1);
-	transition: all 0.3s ease;
-}
-.swiper-button-next:hover,
-.swiper-button-prev:hover {
-	transform: scale(1.3);
 }
 
 @media (max-width: 1024px) {
