--- a/src/css/main_content.css
+++ b/src/css/main_content.css
@@ -815,7 +815,6 @@
   margin: 50px auto;
   max-width: 570px;
   min-width: 320px;
-  height: 700px;
   padding: 20px 50px;
   width: 100%;
 }
@@ -842,7 +841,6 @@
 
 .main-content > .ranking-section .container .songs {
   width: 100%;
-  height: 552px;
   position: relative;
   flex-direction: column;
 }
@@ -855,15 +853,67 @@
   letter-spacing: 0.2px;
   font-size: 1.2rem;
   position: relative;
-  padding: 0 32px 16px;
+  padding: 16px 32px;
   color: #e87867;
   margin: 0 40px;
 }
 
 .main-content > .ranking-section .container .songs .itemSong {
   width: 100%;
+  height: 80px;
   display: flex;
   padding-bottom: 16px;
+  transition: all 0.35s cubic-bezier(0.62, 0.21, 0.19, 0.84);
+}
+
+.main-content > .ranking-section .container .songs .itemSong:hover .content .number {
+  width: 40px;
+  height: 40px;
+  left: 12px;
+  top: 12px;
+  font-size: 18px;
+  background-color: rgba(255, 255, 255, 0.4);
+  backdrop-filter: blur(5px);
+}
+
+.main-content > .ranking-section .container .songs .itemSong:hover .content .image {
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  border-radius: 6px;
+  transition: all 0.4s 0.2s cubic-bezier(0.62, 0.21, 0.19, 0.84);
+}
+
+.main-content > .ranking-section .container .songs .itemSong:hover .content .image img {
+  filter: grayscale(100%);
+}
+
+.main-content > .ranking-section .container .songs .itemSong:hover .content .image:before {
+  background-color: #7a7a7a;
+  opacity: 0.4;
+}
+
+.main-content > .ranking-section .container .songs .itemSong:hover .content .image:after {
+  opacity: 0.6;
+}
+
+.main-content > .ranking-section .container .songs .itemSong:hover .content .info .moreInfo {
+  visibility: visible;
+  opacity: 1;
+  bottom: 0;
+  transition: all 0.3s 0.3s ease;
+}
+
+.main-content > .ranking-section .container .songs .itemSong:hover .content .info .text {
+  color: white;
+  font-size: 14px;
+  top: 32px;
+}
+
+.main-content > .ranking-section .container .songs .itemSong:hover .content .info .plays {
+  color: white;
+  top: 32px;
 }
 
 .main-content > .ranking-section .container .songs .itemSong.featured {
@@ -871,7 +921,7 @@
   padding-bottom: 0px;
   margin-bottom: 10px;
   max-width: 602px;
-  position: absolute;
+  position: relative;
   top: 0;
   height: 184px;
   color: white;
@@ -915,6 +965,11 @@
 .main-content > .ranking-section .container .songs .itemSong.featured .content .image::after {
   opacity: 0.5;
   background: #5eadb7;
+}
+
+.main-content > .ranking-section .container .songs .itemSong.featured .content .image > img {
+  width: 100%;
+  height: 500px;
 }
 
 .main-content > .ranking-section .container .songs .itemSong.featured .content .info {
@@ -984,15 +1039,15 @@
   justify-content: space-around;
 }
 
-.main-content > .ranking-section .container .songs .itemSong.animeIn .text {
+.main-content > .ranking-section .container .songs .itemSong.animeIn .content .info .text {
   top: 50%;
-  transform: translateY(-50%);
+  transform: translateY(0);
   font-size: 12px;
 }
 
-.main-content > .ranking-section .container .songs .itemSong.animeIn .plays {
+.main-content > .ranking-section .container .songs .itemSong.animeIn .content .info .plays {
   top: 50%;
-  transform: translateY(-50%);
+  transform: translateY(0);
 }
 
 .main-content > .ranking-section .container .songs .itemSong .content {
@@ -1030,7 +1085,7 @@
   left: 8px;
   top: 8px;
   width: 48px;
-  height: calc(100% - 16px);
+  height: 48px;
   transition: all 0.6s 0.1s cubic-bezier(0.02, 1.09, 0.19, 1.01);
 }
 
@@ -1044,6 +1099,11 @@
   left: 0;
   top: 0;
   transition: all 0.4s 0.2s ease;
+}
+
+.main-content > .ranking-section .container .songs .itemSong .content .image > img {
+  width: 100%;
+  height: 100%;
 }
 
 .main-content > .ranking-section .container .songs .itemSong .content .info {
