--- a/src/css/main_content.scss
+++ b/src/css/main_content.scss
@@ -783,7 +783,6 @@
 			margin: 50px auto;
 			max-width: 570px;
 			min-width: 320px;
-			height: 700px;
 			padding: 20px 50px;
 			width: 100%;
 
@@ -808,7 +807,6 @@
 			}
 			.songs {
 				width: 100%;
-				height: 552px;
 				position: relative;
 				@extend %flexCenter;
 				flex-direction: column;
@@ -821,20 +819,74 @@
 					letter-spacing: 0.2px;
 					font-size: 1.2rem;
 					position: relative;
-					padding: 0 32px 16px;
+					padding: 16px 32px;
 					color: #e87867;
 					margin: 0 40px;
 				}
 				.itemSong {
 					width: 100%;
+					height: 80px;
 					display: flex;
 					padding-bottom: 16px;
+					transition: all 0.35s cubic-bezier(0.62, 0.21, 0.19, 0.84);
+					&:hover {
+						.content {
+							.number {
+								width: 40px;
+								height: 40px;
+								left: 12px;
+								top: 12px;
+								font-size: 18px;
+								background-color: rgba(white, 0.4);
+								backdrop-filter: blur(5px);
+							}
+							.image {
+								width: 100%;
+								height: 100%;
+								left: 0;
+								top: 0;
+								border-radius: 6px;
+								transition: all 0.4s 0.2s
+									cubic-bezier(0.62, 0.21, 0.19, 0.84);
+
+								img {
+									filter: grayscale(100%);
+								}
+
+								&:before {
+									background-color: #7a7a7a;
+									opacity: 0.4;
+								}
+
+								&:after {
+									opacity: 0.6;
+								}
+							}
+							.info {
+								.moreInfo {
+									visibility: visible;
+									opacity: 1;
+									bottom: 0;
+									transition: all 0.3s 0.3s ease;
+								}
+								.text {
+									color: white;
+									font-size: 14px;
+									top: 32px;
+								}
+								.plays {
+									color: white;
+									top: 32px;
+								}
+							}
+						}
+					}
 					&.featured {
 						width: calc(100% + 80px + 32px);
 						padding-bottom: 0px;
 						margin-bottom: 10px;
 						max-width: 602px;
-						position: absolute;
+						position: relative;
 						top: 0;
 						height: 184px;
 						color: white;
@@ -875,6 +927,10 @@
 								&::after {
 									opacity: 0.5;
 									background: #5eadb7;
+								}
+								& > img {
+									width: 100%;
+									height: 500px;
 								}
 							}
 							.info {
@@ -942,15 +998,18 @@
 						}
 					}
 					&.animeIn {
-						.text {
-							top: 50%;
-							transform: translateY(-50%);
-							font-size: 12px;
-						}
-
-						.plays {
-							top: 50%;
-							transform: translateY(-50%);
+						.content {
+							.info {
+								.text {
+									top: 50%;
+									transform: translateY(0);
+									font-size: 12px;
+								}
+								.plays {
+									top: 50%;
+									transform: translateY(0);
+								}
+							}
 						}
 					}
 
@@ -989,7 +1048,7 @@
 							left: 8px;
 							top: 8px;
 							width: 48px;
-							height: calc(100% - 16px);
+							height: 48px;
 							transition: all 0.6s 0.1s
 								cubic-bezier(0.02, 1.09, 0.19, 1.01);
 							&::before,
@@ -1003,6 +1062,10 @@
 								left: 0;
 								top: 0;
 								transition: all 0.4s 0.2s ease;
+							}
+							& > img {
+								width: 100%;
+								height: 100%;
 							}
 						}
 						.info {
