--- a/src/css/main_content.css
+++ b/src/css/main_content.css
@@ -1205,19 +1205,19 @@
 }
 
 .main-content > .ranking-section .container .load-remain {
+  letter-spacing: 4px;
   position: relative;
-  font-size: 1.3rem;
   margin: 20px auto;
+  font-size: 1.3rem;
+  max-width: 280px;
   cursor: pointer;
   padding: 20px;
   border: none;
-  width: 280px;
+  color: #fff;
   outline: none;
   border-radius: 50px;
   background: linear-gradient(90deg, #f74add, #d92b2b, #ffaf1c, #f74add);
   background-size: 400%;
-  color: #fff;
-  letter-spacing: 4px;
 }
 
 .main-content > .ranking-section .container .load-remain::before {
@@ -1397,7 +1397,71 @@
     width: 100%;
     margin: 0;
   }
+  .main-content > .ranking-section .container .header {
+    height: 150px;
+  }
+  .main-content > .ranking-section .container .header .title {
+    font-size: 2rem;
+  }
+  .main-content > .ranking-section .container .header .subtitle {
+    font-size: 1.1rem;
+  }
   .main-content > .ranking-section .container .songs .itemSong.featured {
     width: calc(100vw - 70px);
+  }
+  .main-content > .ranking-section .container .songs .categories {
+    width: calc(100vw - 70px - 64px);
+    font-size: 1.1rem;
+    padding: 24px;
+  }
+  .main-content > .ranking-section .container .songs .itemSong {
+    width: calc(100vw - 70px - 24px);
+    height: 100px;
+  }
+  .main-content > .ranking-section .container .songs .itemSong:hover .content .number {
+    font-size: 18px;
+  }
+  .main-content > .ranking-section .container .songs .itemSong:hover .content .info .moreInfo {
+    bottom: 0;
+    opacity: 1;
+    visibility: visible;
+    transition: all 0.3s 0.3s ease;
+  }
+  .main-content > .ranking-section .container .songs .itemSong:hover .content .info .text {
+    top: 52px;
+    color: white;
+  }
+  .main-content > .ranking-section .container .songs .itemSong:hover .content .info .plays {
+    top: 42px;
+    color: white;
+  }
+  .main-content > .ranking-section .container .songs .itemSong .content .number {
+    width: 30px;
+    height: 30px;
+    font-size: 1.1rem;
+  }
+  .main-content > .ranking-section .container .songs .itemSong .content .image {
+    width: 68px;
+    height: 68px;
+  }
+  .main-content > .ranking-section .container .songs .itemSong .content .image::before, .main-content > .ranking-section .container .songs .itemSong .content .image::after {
+    height: 100%;
+    width: 100%;
+  }
+  .main-content > .ranking-section .container .songs .itemSong .content .image > img {
+    width: 68px;
+  }
+  .main-content > .ranking-section .container .songs .itemSong .content .info {
+    width: 100%;
+  }
+  .main-content > .ranking-section .container .songs .itemSong .content .info .text {
+    font-size: 1rem;
+  }
+  .main-content > .ranking-section .container .songs .itemSong .content .info .plays {
+    font-size: 1rem;
+  }
+  .main-content > .ranking-section .container .songs .itemSong .content .info .moreInfo {
+    font-size: 1rem;
+    width: 100%;
   }
 }
